feat: Migrate user authentication to use username instead of email, add custom unauthorized exception handling, and enhance CORS configuration.